--- a/BlackJack/wwwroot/css/site.css
+++ b/BlackJack/wwwroot/css/site.css
@@ -7,6 +7,14 @@ body {
     background-color: #052522;
 }
 
+.my-link {
+    color: yellow;
+}
+
+.my-link:hover {
+    color: darkorange;
+}
+
 .body-content { /* for all pages */
     padding-left: 15px;
     padding-right: 15px;
@@ -33,7 +41,7 @@ footer {
     padding: 20px 50px;
 }
 
-    footer p, a, a:hover {
+    footer p, footer a, footer a:hover {
         color: #9d9d9d;
     }
 
@@ -285,7 +293,7 @@ footer {
         }
 
     .my-cards-container {
-/*        max-width: 300px;*/
+        /*        max-width: 300px;*/
         max-width: 150px; /* smaller cards on phones */
         margin: 0 auto;
     }
